# stationeers-ic-optimizer

./: Cargo.toml  README.md  lifetime-analyzer.py  test.mips
examples/: test.mips
src/: alias.rs  device.rs  ic.rs  instruction.rs  main.rs  network.rs
