[package]
name = "ic-optimizer-rs"
version = "0.1.0"
authors = ["Nils Olsson <nilso@enosis.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
regex = "1.3.9"
lazy_static = "1.4.0"
maplit = "1.0.2"
itertools = "0.9.0"
